--- a/images+videos.html
+++ b/images+videos.html
@@ -10,18 +10,17 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" integrity="sha256-c+C87jupO1otD1I5uyxV68WmSLCqtIoNlcHLXtzLCT0=" crossorigin="anonymous" />
   <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+
   <title>Welcome To Strängnäs</title>
-  <title>Document</title>
+
 </head>
 
 <body>
 
-  <!----------------------header-------------------------->
-
-  <!----------nav------->
+  <!--nav-->
 
   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-    <a class="navbar-brand" href="index.html"><img class="image-size" src="assets/images/sweden-flag-png-1.png"></img></a>
+    <a class="navbar-brand" href="index.html"><img class="image-size" src="assets/images/sweden-flag-png-1.png" alt="sweden flag"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -36,7 +35,8 @@
     </div>
   </nav>
 
-  <!---------------main------------------------------------>
+  <!--main-->
+  
   <div id="container">
     <h1 class="imagesvideos">IMAGES & VIDEOS</h1>
     <div class="row">
@@ -49,66 +49,63 @@
     </div>
     <div class="row">
       <div class="col-sm-12 col-md-6">
-        <img src="assets/images/pic1.jpg" class="rounded float-center img-fluid"></img>
+        <img src="assets/images/pic1.jpg" alt="strängnäs harbour" class="rounded float-center img-fluid">
       </div>
       <div class="col-sm-12 col-md-6">
-        <img src="assets/images/pic2.jpg" class="rounded float-center img-fluid"></img>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-12 col-md-6">
-        <img src="assets/images/pic3.jpg" class="rounded float-center img-fluid"></img>
-      </div>
-      <div class="col-sm-12 col-md-6">
-        <img src="assets/images/pic4.jpg" class="rounded float-center img-fluid"></img>
-      </div>
-    </div>
-    
-    <div class="row">
-      <div class="col-sm-12 col-md-6">
-        <img src="assets/images/pic9.jpg" class="rounded float-center img-fluid"></img>
-      </div>
-      <div class="col-sm-12 col-md-6">
-        <img src="assets/images/pic19.jpg" class="rounded float-center img-fluid"></img>
+        <img src="assets/images/pic2.jpg" alt="strängnäs harbour with church" class="rounded float-center img-fluid">
       </div>
     </div>
     <div class="row">
       <div class="col-sm-12 col-md-6">
-        <img src="assets/images/pic18.jpg" class="rounded float-center img-fluid"></img>
+        <img src="assets/images/pic3.jpg" alt="strängnäs harbour with church and windmill" class="rounded float-center img-fluid">
       </div>
       <div class="col-sm-12 col-md-6">
-        <img src="assets/images/pic17.jpg" class="rounded float-center img-fluid"></img>
+        <img src="assets/images/pic4.jpg" alt="strängnäs harbour with windmill" class="rounded float-center img-fluid">
       </div>
     </div>
     <div class="row">
       <div class="col-sm-12 col-md-6">
-        <img src="assets/images/pic6.jpg" class="rounded float-center img-fluid"></img>
+        <img src="assets/images/pic9.jpg" alt="strängnäs lake frozen" class="rounded float-center img-fluid">
       </div>
       <div class="col-sm-12 col-md-6">
-        <img src="assets/images/pic8.jpg" class="rounded float-center img-fluid"></img>
+        <img src="assets/images/pic19.jpg" alt="strängnäs harbour" class="rounded float-center img-fluid">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-12 col-md-6">
+        <img src="assets/images/pic18.jpg" alt="strängnäs harbour" class="rounded float-center img-fluid">
+      </div>
+      <div class="col-sm-12 col-md-6">
+        <img src="assets/images/pic17.jpg" alt="strängnäs harbour" class="rounded float-center img-fluid">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-12 col-md-6">
+        <img src="assets/images/pic6.jpg" alt="view of strängnäs from afar" class="rounded float-center img-fluid">
+      </div>
+      <div class="col-sm-12 col-md-6">
+        <img src="assets/images/pic8.jpg" alt="strängnäs harbour" class="rounded float-center img-fluid">
       </div>
     </div>
     <div class="row">
       <div class="col-sm-6 col-md-4">
-        <img src="assets/images/pic14.jpg" class="rounded float-center img-fluid"></img>
+        <img src="assets/images/pic14.jpg" alt="hepatica flowers" class="rounded float-center img-fluid">
       </div>
       <div class="col-sm-6 col-md-4">
-        <img src="assets/images/pic12.jpg" class="rounded float-center img-fluid"></img>
+        <img src="assets/images/pic12.jpg" alt="frozen water on rocks" class="rounded float-center img-fluid">
       </div>
       <div class="col-sm-6 col-md-4">
-        <img src="assets/images/pic11.jpg" class="rounded float-center img-fluid"></img>
+        <img src="assets/images/pic11.jpg" alt="frozen water on rocks" class="rounded float-center img-fluid">
       </div>
-      </div>
+    </div>
   </div>
 
-
-
-
-  <!----------------------footer------------------------>
+<!--footer-->
+ 
   <div class="footer-basic">
     <footer>
       <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a></div>
-      <h2>For more information about Strängnäs and the surrounding area search for "Södermanland" in the social media links above or enter your Email below to receive up to date offers and discounts on activities and restaurants in the whole of Södermanland.</h3>
+      <h2>For more information about Strängnäs and the surrounding area search for "Södermanland" in the social media links above or enter your Email below to receive up to date offers and discounts on activities and restaurants in the whole of Södermanland.</h2>
         <form class="form-inline justify-content-center">
           <div class="form-group">
             <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
