--- a/history.html
+++ b/history.html
@@ -10,18 +10,18 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.3.1/css/hover-min.css" integrity="sha256-c+C87jupO1otD1I5uyxV68WmSLCqtIoNlcHLXtzLCT0=" crossorigin="anonymous" />
   <link rel="stylesheet" href="assets/css/style.css" type="text/css" />
+  
   <title>Welcome To Strängnäs</title>
-  <title>Document</title>
+
 </head>
 
 <body>
 
-  <!----------------------header-------------------------->
 
-  <!----------nav------->
+  <!--nav-->
 
  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-    <a class="navbar-brand" href="index.html"><img class="image-size" src="assets/images/sweden-flag-png-1.png"></img></a>
+    <a class="navbar-brand" href="index.html"><img class="image-size" src="assets/images/sweden-flag-png-1.png" alt="sweden flag"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -37,16 +37,16 @@
   </nav>
 
 
-  <!---------------main------------------------------------>
+  <!--main-->
   <div id="container">
     <h1 class="history">HISTORY</h1>
     <h2 class="history-sub-head1">ABOUT STRÄNGNÄS</h2>
     <div class="row">
       <div class="col-md-6 sm-12">
-        <img src="assets/images/history1.jpg" class="rounded float-center img-fluid"></img>
+        <img src="assets/images/history1.jpg" alt="image of fire in strängnäs" class="rounded float-center img-fluid">
       </div>
       <div class="col-md-6 sm-12">
-        <img src="assets/images/history2.jpg" class="rounded float-center img-fluid"></img>
+        <img src="assets/images/history2.jpg"  alt="image of fire in strängnäs" class="rounded float-center img-fluid">
       </div>
       <div class="col-12">
         <p>The city's name is first encountered in 1120, in reference to the Diocese. The name Strängnäs is derived from the fact that the city is located near a strait and on several hills, especially on two major ones, the "Mill Hill" and the "Cathedral
@@ -61,11 +61,11 @@
   </div>
 
 
-  <!----------------------footer------------------------>
+  <!--footer-->
   <div class="footer-basic">
     <footer>
       <div class="social"><a href="#"><i class="icon ion-social-instagram"></i></a><a href="#"><i class="icon ion-social-snapchat"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-facebook"></i></a></div>
-      <h2>For more information about Strängnäs and the surrounding area search for "Södermanland" in the social media links above or enter your Email below to receive up to date offers and discounts on activities and restaurants in the whole of Södermanland.</h3>
+      <h2>For more information about Strängnäs and the surrounding area search for "Södermanland" in the social media links above or enter your Email below to receive up to date offers and discounts on activities and restaurants in the whole of Södermanland.</h2>
         <form class="form-inline justify-content-center">
           <div class="form-group">
             <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Enter email">
