--- a/images+videos.html
+++ b/images+videos.html
@@ -91,11 +91,11 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-sm-12 col-md-6  embed-responsive embed-responsive-16by9">
-       <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/TQrNI2y-Zx4" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <div class="col-sm-12 col-md-12 embed-responsive embed-responsive-16by9">
+       <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/TQrNI2y-Zx4" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
-      <div class="col-sm-12 col-md-6 embed-responsive embed-responsive-16by9">
-        <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/J5FrnGHEJdw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <div class="col-sm-12 col-md-12 embed-responsive embed-responsive-16by9">
+        <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/J5FrnGHEJdw" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </div>
   </div>
