--- a/images+videos.html
+++ b/images+videos.html
@@ -90,6 +90,7 @@
         <img src="assets/images/pic11.jpg" alt="frozen water on rocks" class="rounded float-center img-fluid">
       </div>
     </div>
+    <div class="iframe-holder">
     <div class="row">
       <div class="col-sm-12 col-md-6 embed-responsive embed-responsive-16by9">
        <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/TQrNI2y-Zx4" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -97,6 +98,7 @@
       <div class="col-sm-12 col-md-6 embed-responsive embed-responsive-16by9">
         <iframe class="embed-responsive-item" width="560" height="315" src="https://www.youtube.com/embed/J5FrnGHEJdw" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
+  </div>
   </div>
   </div>
 
